refactor: Optimize route registration life cycle